# tolmans-sowbug-playground

./: .gitignore  README.md  pyproject.toml
configs/: dqn_basic.yaml  maze.yaml  sowbug_basic.yaml
docs/plans/: 2026-02-28-schematic-sowbug-design.md  2026-02-28-schematic-sowbug-plan.md  2026-03-01-disappointment-extinction-design.md  2026-03-01-disappointment-extinction-plan.md  2026-03-01-layout-restructure-design.md  2026-03-01-layout-restructure-plan.md  2026-03-01-ui-improvements-design.md  2026-03-01-ui-improvements-plan.md
src/some_sim/: __main__.py
src/some_sim/agents/: sowbug.py
src/some_sim/analysis/: plots.py  recorder.py
src/some_sim/core/: agent.py  config.py  environment.py  simulation.py
src/some_sim/systems/: memory.py  motor.py  sensors.py
src/some_sim/web/: server.py
src/some_sim/web/static/: index.html  main.js  style.css
src/tolmans_sowbug_playground/: __main__.py
src/tolmans_sowbug_playground/agents/: dqn_sowbug.py  sowbug.py
src/tolmans_sowbug_playground/analysis/: plots.py  recorder.py
src/tolmans_sowbug_playground/core/: agent.py  config.py  environment.py  simulation.py  stimulus.py
src/tolmans_sowbug_playground/systems/: dqn.py  drives.py  memory.py  motor.py  organs.py  sensors.py
src/tolmans_sowbug_playground/web/: server.py
tests/: test_agent.py  test_config.py  test_dqn.py  test_dqn_sowbug.py  test_drives.py  test_environment.py  test_memory.py  test_motor.py  test_organs.py  test_plots.py  test_recorder.py  test_sensors.py  test_simulation.py  test_sowbug.py  test_stimulus.py
(+3 files in other folders)
